<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DisplayContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/avatarImageViewDC"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:clickable="true"
            android:focusable="true"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:maxHeight="300dp"
            android:scaleType="centerInside"
            android:onClick="addAvatar"/>


        <TextView
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstName"
            android:textColor="#000000"
            android:textSize="22sp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"/>

        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:autofillHints="Name" />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="#000000"
            android:textSize="22sp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"

            android:layout_marginRight="12dp"/>

        <EditText
            android:id="@+id/editTextPersonLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:autofillHints="Last Name" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="#000000"
            android:textSize="22sp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:autofillHints="Phone Number" />

        <Button
            android:id="@+id/saveContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveContact"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:onClick="saveContact"/>

        <Button
            android:id="@+id/deleteContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteContact"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@android:color/holo_red_dark"
            android:onClick="deleteContact"/>
    </LinearLayout>

</ScrollView>